* made release run on Linux out-of-the-box * updated documentation * more experiment script files