@@ -1,2 +1,2 @@
 #!/bin/bash
-java -cp sam_mine.jar:./libs-external/* org.st.sam.mine.RunExperimentEffect $*
+java -Xmx2G -XX:MaxPermSize=256m -cp sam_mine.jar:./libs-external/* org.st.sam.mine.RunExperimentEffect $*
